--- a/fikabot/configuration.json
+++ b/fikabot/configuration.json
@@ -32,6 +32,7 @@
       "Klockan har talat:",
       "Kollegor!",
       "Lystring!",
+      "Mumier och makaroner!",
       "Samtidigt i verkligheten:",
       "Som vi har väntat!",
       "Stoppa pressarna!",
@@ -49,7 +50,6 @@
       "Den som inte är sugen på {} ljuger!",
       "Det är {}!",
       "Det är {} NU!",
-      "Det är {} åt folket!",
       "Det är dags för {}!",
       "Det är hög tid för {}!",
       "Ett litet steg för en människa, men stora steg mot {}!",
