--- a/fikabot/configuration.json
+++ b/fikabot/configuration.json
@@ -52,7 +52,7 @@
       "Det är {} NU!",
       "Det är dags för {}!",
       "Det är hög tid för {}!",
-      "Ett litet steg för en människa, men stora steg mot {}!",
+      "Ett litet steg för en bot, men stora steg mot {}!",
       "Fråga inte vad {0} kan göra för dig, fråga vad du kan göra för {0}!",
       "För {} i tiden!",
       "Gärna guldklocka, men först rejäl {}!",
